# nmrkit

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/dosy_parameter_prediction/: predict_dosy_parameters.py
nmrkit/: __init__.py  constants.py
nmrkit/acquisition/: __init__.py  dosy.py
nmrkit/core/: data.py
nmrkit/io/: base.py
nmrkit/io/formats/: delta.py  topspin.py
nmrkit/processing/: __init__.py  baseline.py  complex.py  ft.py  phase.py  resize.py  window.py
nmrkit/processing/workflows/: basic_1d.py  basic_2d.py
nmrkit/utils/: complex.py  validation.py
nmrkit/visualization/: plotting.py
tests/acquisition/: test_dosy.py
tests/core/: test_data.py
tests/io/: test_delta.py
tests/processing/: test_baseline.py  test_complex.py  test_ft.py  test_phase.py  test_resize.py  test_window.py
tests/utils/: test_validation.py
tests/visualization/: test_plotting.py
